# simple_chat

./: README.md  pyproject.toml
chat/: consumers.py  urls.py  views.py
config/: routing.py  settings.py  urls.py
